(library
 (name          bacCaml)
 (public_name   baccaml.jit)
 (flags         (-w -4-33-40-41-42-43-34-44
		 -short-paths
		 -strict-sequence
		 -strict-formats
		 -short-paths
		 -keep-locs))
 (libraries     core str stringext logs fmt minCaml corext)
 (preprocess (pps ppx_fields_conv ppx_deriving.show)))
